Live Data/mdapipkg/unpackaged/objects/Targets__c.object
<CustomObject>
    <fields>
        <fullName>ABC_Target__c</fullName>
        <formula>Initals_Target__c / 3 + Annuals_Target__c + Saas_Target__c + Subs_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABC Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ABC__c</fullName>
        <formula>(Initals__c / 3) + 
Annuals__c   + 
Saas__c  + 

Subs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annuals_MTD__c</fullName>
        <label>Annuals MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annuals_Target__c</fullName>
        <label>Annuals Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annuals__c</fullName>
        <label>Annuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Start__c</fullName>
        <label>FY Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initails_MTD__c</fullName>
        <label>Initails MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initals_Target__c</fullName>
        <label>Initals Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initals__c</fullName>
        <label>Initals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IntergrationID__c</fullName>
        <externalId>true</externalId>
        <label>IntergrationID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ManagerCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManagerCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>IF(MONTH(TODAY()) = 7, 1 ,  IF(MONTH(TODAY()) = 8, 2 , IF(MONTH(TODAY()) = 9, 3 , IF(MONTH(TODAY()) = 10, 4 , IF(MONTH(TODAY()) = 11, 5 , IF(MONTH(TODAY()) = 12, 6 , IF(MONTH(TODAY()) = 1, 7 , IF(MONTH(TODAY()) = 2, 8 , IF(MONTH(TODAY()) = 3, 9 , IF(MONTH(TODAY()) = 4, 10 , IF(MONTH(TODAY()) = 5, 11 , IF(MONTH(TODAY()) = 6, 12 , NULL))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presidents_Club_Qualified__c</fullName>
        <formula>IF( Presidents_Clubs__c &gt;  Presidents_Clubs_Target__c &amp;&amp; Presidents_Clubs_Target__c != NULL , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presidents Club Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presidents_Clubs_Target__c</fullName>
        <label>Presidents Clubs Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Presidents_Clubs__c</fullName>
        <formula>ABC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presidents Clubs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saas_MTD__c</fullName>
        <label>Saas MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saas_Target__c</fullName>
        <label>Saas Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saas__c</fullName>
        <label>Saas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_MTD__c</fullName>
        <label>Services MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Target__c</fullName>
        <label>Services Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subs_MTD__c</fullName>
        <label>Subs MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subs_Target__c</fullName>
        <label>Subs Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subs__c</fullName>
        <label>Subs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_ABC_Target__c</fullName>
        <label>Team ABC Target</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Targets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Targets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>